--- a/demo1.html
+++ b/demo1.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document1</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>my first github project</h1>
+    <h1>my second github project</h1>
 </body>
 </html>
